# crime-risk-analyzer

./: .gitignore  NOTICE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/data/: README.md
backend/experiments/: ablation-analyze-groq.json  ablation-analyze.json  ablation-baseline.json
backend/results/: .gitignore
backend/scripts/: __init__.py  check.py
backend/src/crime_risk_analyzer/: __init__.py  config.py  demo_cache.py  errors.py  geocoding.py  main.py  ontology.py  ontology_materialize.py  ontology_namespaces.py  orchestrator.py  overpass_client.py  scenarios.py
backend/src/crime_risk_analyzer/eval/: __main__.py  aggregate.py  city_agnostic.py  city_agnostic_report.py  cli.py  compare.py  geometry.py  gold.py  harness.py  metrics.py  pricing.py  repeat.py  repeated_comparison.py  schema.py  snapshots.py  winner.py
backend/src/crime_risk_analyzer/i18n/: README.md  __init__.py  extract.py  terminus_labels.json  terminus_labels.py
backend/src/crime_risk_analyzer/llm/: __init__.py  client.py
backend/src/crime_risk_analyzer/models/: __init__.py  geo.py  risk.py  vocab.py
backend/src/crime_risk_analyzer/rag/: __init__.py  generation.py  grounding.py  retrieval.py
backend/src/crime_risk_analyzer/sparql_module/: __init__.py  osm_mapping.py  query_executor.py
backend/tests/: conftest.py  test_analyze.py  test_baseline.py  test_check.py  test_cities.py  test_config.py  test_cors.py  test_demo_cache.py  test_dependencies.py  test_errors.py  test_generation.py  test_geo.py  test_geocoding.py  test_grounding.py  test_health.py  test_lifespan.py  test_llm_client.py  test_ontology.py  test_ontology_fixture.py  test_ontology_materialize.py  test_ontology_namespaces.py  test_orchestrator.py  test_osm_mapping.py  test_overpass_client.py  test_query_executor.py  test_retrieval.py  test_risk.py  test_scenarios.py  test_vocab.py
backend/tests/eval/: _doubles.py  test_aggregate.py  test_capture_entrypoint.py  test_city_agnostic_capture.py  test_city_agnostic_core.py  test_city_agnostic_report.py  test_cli.py  test_compare.py  test_experiments.py  test_geometry.py  test_gold.py  test_harness.py  test_main_dispatch.py  test_metrics.py  test_metrics_it_anchors.py  test_model_comparison.py  test_pricing.py  test_repeat.py  test_repeated_comparison.py  test_schema.py  test_snapshots.py  test_winner.py
backend/tests/fixtures/: ontology_empty.owl  ontology_sample.ttl  ontology_small.owl  overpass_sample.json  terminus_labels_fragment.ttl
backend/tests/i18n/: test_api_labels.py  test_data_integrity.py  test_extract.py  test_generation_vocab.py  test_terminus_labels.py
frontend/: .gitattributes  .gitignore  .prettierignore  README.md  angular.json  eslint.config.js  jest.config.js  package-lock.json  package.json  playwright.config.ts  proxy.config.json  tsconfig.json
frontend/e2e/: base-regenerate.spec.ts  detail-filter.spec.ts  error-state.spec.ts  fsm-guards.spec.ts  panel-dock.spec.ts  results.spec.ts  smoke.spec.ts
frontend/e2e/fixtures/: analyze.happy.json  analyze.regenerate.json  baseline.happy.json  cities.json  error-422.json
frontend/e2e/support/: mocking.ts  selectors.ts
frontend/public/: index.html  style.css
frontend/public/demo/cache/: colosseo.json  duomo.json  termini.json
frontend/src/: api.js  app.js  confidence.js  index.html  map.js  state.js  styles.css  ui-helpers.js  ui.js
frontend/src/app/: app.css  app.html  app.spec.ts  app.ts
frontend/tests/: api.test.js  baseline.test.js  confidence.test.js  coverage-badge.test.js  input-panel.test.js  marker-card.test.js  narrative.test.js  offline-cache.test.js  quality-pass.test.js  risk-card.test.js  scenarios-panel.test.js  state.test.js
(+50 files in other folders)
