[project]
name = "crime-risk-analyzer"
version = "0.1.0"
description = "Backend del Crime Risk Analyzer: API FastAPI, reasoning ontologico (SPARQL) e pipeline RAG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crime_risk_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
