[project]
name = "crime-risk-analyzer"
version = "0.1.0"
description = "Backend del Crime Risk Analyzer: API FastAPI, reasoning ontologico (SPARQL) e pipeline RAG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0",
    "rdflib>=7.6.0",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crime_risk_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --cov=crime_risk_analyzer --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
# Stile di default di Ruff (già in uso e verificato in CI dal lane backend).
# Sezione esplicita per documentare che `ruff format` è il formatter ufficiale
# del backend. Nessun override: non altera la formattazione esistente.

[tool.pyright]
include = ["src", "tests", "scripts"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
